<resources>
    <string name="app_name">Restaurant Driver</string>

    <string name="language_english">en</string>
    <string name="language_hindi">ar</string>

    <string name="font_regular">fonts/Poppins-Regular.ttf</string>
    <string name="font_medium">fonts/Poppins-Medium.ttf</string>
    <string name="font_bold">fonts/Poppins-Bold.ttf</string>
    <string name="font_black">fonts/Poppins-Black.ttf</string>
    <string name="font_thin">fonts/Poppins-SemiBold.ttf</string>
    <string name="font_light">fonts/Poppins-Light.ttf</string>
    <string name="font_italic">fonts/Poppins-ExtraBold.ttf</string>

    <string name="logout">Are you sure to logout from this app?</string>
    <string name="exit_screen">Are you sure to exit from this app?</string>
    <string name="no_internet">No internet connection.\n Go to device settings and connect to network</string>
    <string name="error_msg">Please try again. Something went wrong</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings</string>
    <string name="validation_all">Please enter all details</string>
    <string name="validation_valid_email">Please enter valid email</string>
    <string name="validation_valid_cpassword">New password and confirm password must be same</string>
    <string name="delivery_address">Delivery address</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="home_menu">Home</string>
    <string name="user_information">User information</string>
    <string name="discount_offer">Discount offer</string>
    <string name="delivered">Delivered</string>
    <string name="notes">Notes</string>
    <string name="total_amount">Total amount</string>
    <string name="delivery_charge">Delivery charge</string>
    <string name="tax_0">Tax(0%)</string>
    <string name="order_total">Order total</string>
    <string name="payment_summery">Payment summary</string>
    <string name="order_summary">Order summary</string>
    <string name="set_logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="type_your_description">Type your description</string>
    <string name="ok">Okay</string>
    <string name="total_completed_norders">Total Orders</string>
    <string name="total_ongoing_norders">Ongoing Orders</string>
    <string name="no_data_found">No data found</string>
    <string name="order_history">Order History</string>
    <string name="no_orderhistory_found">No OrderHistory Found</string>
    <string name="setting">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="select_language">Select Layout</string>
    <string name="email_address">Email</string>
    <string name="mobile_number">Mobile</string>
    <string name="update">Update</string>
    <string name="user_name">Full name</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="lbl_login">Login</string>
    <string name="order_id_">Order Id : </string>
    <string name="payment_type_">Payment Type : </string>
    <string name="qty">QTY : </string>
    <string name="cash">Cash</string>
    <string name="stripe">Stripe</string>
    <string name="wallet">Wallet</string>
    <string name="razorpay">Razorpay</string>
    <string name="order_cancelled_you">Order cancelled by you</string>
    <string name="order_cancelled_admin">Order cancelled by admin</string>
    <string name="order_place">Order placed</string>
    <string name="order_ready">Order accepted</string>
    <string name="on_the_way">Order on the way</string>
    <string name="order_delivered1">Order delivered</string>
    <string name="design_and_developed_by">Designed and Developed By\nPapon Apps</string>
    <string name="dashboard">Dashboard</string>
    <string name="selected_add_ons_list">Selected Add-ons</string>
    <string name="landmark">Landmark</string>
    <string name="door_flat_no">Door / Flat no</string>
    <string name="pincode">Pincode</string>
    <string name="landmark_add">Landmark</string>
    <string name="order_details">Order Details</string>
    <string name="addon">Add-ons</string>
    <string name="write_note">Write Order Notes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_image_form_gallery">Select image form gallery</string>
    <string name="set_image_form_camera">Select image form camera</string>
</resources>