<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_orange"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_minus1sdp"
            android:onClick="onClick"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />

        <TextView
            fontPath="@string/font_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingPrefix" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginTop="@dimen/_10sdp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <EditText
            android:id="@+id/edOldPass"
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:hint="@string/old_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <EditText
            android:id="@+id/edNewPassword"
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:hint="@string/new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="1dp"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <EditText
            android:id="@+id/edConfirmPassword"
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:background="@drawable/bg_onlycorner_gary"
            android:hint="@string/confirm_password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="1dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSubmit"
        fontPath="@string/font_bold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/bg_corner_white_10"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        tools:ignore="MissingPrefix" />
</LinearLayout>