<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_orange">


    <ImageView
        android:src="@drawable/app_bg"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_6sdp"
        android:onClick="onClick"
        android:src="@drawable/ic_back"
        android:id="@+id/ivBack"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/rlForgetPassword"
       >
        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/ic_driver"
            android:layout_centerHorizontal="true"
            android:id="@+id/ivDriver"
           />

        <TextView
            android:id="@+id/tvTitle"
            fontPath="@string/font_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/forgot_pass"
            android:layout_below="@id/ivDriver"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@id/tvTitle"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="center_vertical|start"
            android:textAlignment="viewStart"
            fontPath="@string/font_medium"
            android:background="@drawable/bg_corner_white_10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />


        <TextView
            android:id="@+id/tvSubmit"
            fontPath="@string/font_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edEmail"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/bg_editfield"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:onClick="onClick"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />


    </RelativeLayout>
</RelativeLayout>