<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_orange">

    <ImageView
        android:src="@drawable/app_bg"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/rlLoginDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/ivDrivericon"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_driver" />

        <TextView
            android:id="@+id/tvTitle"
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivDrivericon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/lbl_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edEmail"
            fontPath="@string/font_medium"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@id/tvTitle"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_corner_white_10"
            android:hint="@string/email_address"
            android:textAlignment="viewStart"
            android:gravity="start|center_vertical"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_11ssp"
            tools:ignore="MissingPrefix" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edEmail"
            android:layout_gravity="center|end"
            android:layout_marginTop="@dimen/_8sdp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/edPassword"
                fontPath="@string/font_medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/edEmail"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/bg_corner_white_10"
                android:hint="@string/hint_password"
                android:textAlignment="viewStart"
                android:gravity="start|center_vertical"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:textSize="@dimen/_11ssp"
                tools:ignore="MissingPrefix" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgetPassword"
            fontPath="@string/font_thin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPass"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:onClick="onClick"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvLogin"
            fontPath="@string/font_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvForgetPassword"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_editfield"
            android:backgroundTint="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:padding="@dimen/_10sdp"
            android:text="@string/lbl_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />


    </RelativeLayout>
</RelativeLayout>