<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F2F7">

    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
      >

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="@dimen/_38sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_7sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_nevigation"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:layout_centerInParent="true"
            fontPath="@string/font_thin"
            android:text="@string/dashboard"
            tools:ignore="MissingPrefix" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_NevProfileName"
        fontPath="@string/font_thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlToolBar"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        tools:text="Welcome\nJohan Den"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:id="@+id/llOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_NevProfileName"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_total_order"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:tint="#1E90FF" />
                <TextView
                    android:id="@+id/tv_CountOrderComplate"
                    fontPath="@string/font_thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    fontPath="@string/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/total_completed_norders"
                    android:textColor="@color/gray_d"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:src="@drawable/ic_latest_orders"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:tint="#FFD700" />

                <TextView
                    android:id="@+id/tv_CountOrderOutgoing"
                    fontPath="@string/font_thin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    fontPath="@string/font_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/total_ongoing_norders"
                    android:textColor="@color/gray_d"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="MissingPrefix" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/tvOrderDetail"
        fontPath="@string/font_thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llOrder"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:text="@string/total_ongoing_norders"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        tools:ignore="MissingPrefix" />
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvOrderDetail">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOutGoingOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:visibility="gone"
                android:nestedScrollingEnabled="false" />
            <TextView
                android:id="@+id/tvNoDataFound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_found"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/_5sdp"
                fontPath="@string/font_thin"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                tools:ignore="MissingPrefix" />
        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>